<resources>
    <string name="app_name">BookPlus</string>
    <string name="lblLogin">E-mail</string>
    <string name="lblPassword">Password</string>
    <string name="lblCreateAccount">Create Account</string>
    <string name="login">Login</string>
    <string name="lblExit">Exit</string>
    <string name="lblName">Name</string>
    <string name="lblCEP">Zip Code</string>
    <string name="lblConfirmPassword">Confirm Password</string>
    <string name="lblEmail">Email</string>
    <string name="lblCadastrese">Register</string>
    <string name="btnCadastre">Save</string>
    <string name="lblCidade">City</string>
    <string name="lblObrigatorio">Required field</string>
    <string name="backbutton">Click back to return</string>
    <string name="about">About</string>
    <string name="bookPlusInfo">BookPlus</string>
    <string name="version">version: 1.0</string>
    <string name="passwordNotMatch">Password is not the same</string>
    <string name="lblListItem">List Events</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="lblFairInclude">Add Fair</string>
    <string name="lblFairs">Add Fair</string>
    <string name="DescriptionFair">Description</string>
    <string name="AddressFair">Address</string>
    <string name="DateInitial">Start Date</string>
    <string name="DateFinal">End Date</string>
    <string name="HourInitial">Start Hour</string>
    <string name="HourFinal">End Hour</string>
    <string name="navAddFair">Add Fair</string>
    <string name="NameFair">Name Fair</string>
    <string name="nameFair">Name</string>
    <string name="Success">Saved successfully</string>
    <string name="Removed">Removed successfully</string>
    <string name="Error">Error happened. Please try again later.</string>
    <string name="msg_token_fmt">Token Value</string>
    <string name="ajuda">Call For Help</string>
    <string name="nav_map">Map Fair</string>
    <string name="title_activity_maps">Book Plus - National Book Fair</string>
    <string name="really">You really want to delete?</string>
    <string name="YES">Yes</string>
    <string name="NO">No</string>
    <string name="CANCEL">Cancel</string>
    <string name="title_location_permission">Location</string>
    <string name="text_location_permission">Need Location</string>
    <string name="ok">OK</string>
    <string name="recommend">Share This</string>
    <string name="Share">[BOOKPLUS] New Event</string>
    <string name="TextMail">Hi,\n You have a new event, recommended by your friend.\nNew Book Fair:\nName: {name} Address: {end}\nFROM: {startDate} UNTIL {endDate}\nHOURS: {startHour} UNTIL {endHour}\nCheck out.\nHugs Book Plus</string>
    <string name="pressAndHold">Press and Hold, to Share!</string>

</resources>
